--- a/ayamo_refunds/templates/ayamo_refunds/home.html
+++ b/ayamo_refunds/templates/ayamo_refunds/home.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+{% include "ayamo_refunds/partials/head.html" %}
+
 <body>
     <h1>Hello World - This is the first Ayamo's development project</h1>
 </body>
