added some styles

--- a/ayamo_refunds/templates/ayamo_refunds/partials/head.html
+++ b/ayamo_refunds/templates/ayamo_refunds/partials/head.html
@@ -45,6 +45,38 @@
             --spacing-gutter-large: 5rem;
         }
 
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        html {
+            font-size: 62.5%;
+        }
+
+        body {
+            font-size: 1.6rem;
+            font-family: var(--font-primary);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: top;
+        }
+
+        h1, h2, h3, h4, h5, h6 {
+            font-family: var(--font-headings);
+        }
+
+        a {
+            text-decoration: none;
+            color: var(--color-ayamo-light-blue)
+        }
+        
+        .main-logo {
+            color: var(--color-ayamo-heading-dark-blue)
+        }
+
 
     </style>
 
