added the initial body to the home.html

--- a/ayamo_refunds/templates/ayamo_refunds/home.html
+++ b/ayamo_refunds/templates/ayamo_refunds/home.html
@@ -1,6 +1,27 @@
 {% include "ayamo_refunds/partials/head.html" %}
 
 <body>
-    <h1>Hello World - This is the first Ayamo's development project</h1>
+    <header class="main-header-container">
+        <div class="main-header container">
+            <h1>
+                <a class="main-logo" href="/">
+                    <i class="fa-solid fa-hand-holding-dollar main-logo-icon"></i>
+                    <span class="main-logo-text">
+                        Expenses
+                    </span>
+                </a>
+            </h1>
+    </header>
+    <br>
+    <h2>Bem-vindo, {{user.name}}</h2>
+    <br>
+    <h4>Você tem:</h4>
+    <p>{{user.to_approve}} itens aguardando <b>aprovação</b></p>
+    <p>{{user.to_refund}} itens aguardando <b>reembolso</b></p>
+    <p>{{user.to_reply}} itens aguardando <b>sua resposta</b></p>
+    <p>{{user.last_15_days}} itens <b>finalizados nos últimos 15 dias</b></p>
+    <br>
+    <br>
+    <h3><a href="add_expense.html">Adicionar Despesa</a></h3>
 </body>
 </html>
