home.html fixed

--- a/ayamo_refunds/templates/ayamo_refunds/home.html
+++ b/ayamo_refunds/templates/ayamo_refunds/home.html
@@ -11,6 +11,7 @@
                     </span>
                 </a>
             </h1>
+        </div>
     </header>
     <br>
     <h2>Bem-vindo, {{user.name}}</h2>
