changing body background to gray 1

--- a/ayamo_refunds/templates/ayamo_refunds/partials/head.html
+++ b/ayamo_refunds/templates/ayamo_refunds/partials/head.html
@@ -24,6 +24,18 @@
             --color-ayamo-yellow: #FABC32;
             --color-ayamo-red: #B7322B;
 
+            /*grays*/
+            --color-gray-0: #f9f9f9;
+            --color-gray-1: #e0e0e0;
+            --color-gray-2: #c7c7c7;
+            --color-gray-3: #aeaeae;
+            --color-gray-4: #959595;
+            --color-gray-5: #7d7d7d;
+            --color-gray-6: #646464;
+            --color-gray-7: #4b4b4b;
+            --color-gray-8: #323232;
+            --color-gray-9: #191919;
+
             /*cursor on*/
             --color-ayamo-cursor-dark-blue: #3F4C52;
 
@@ -62,6 +74,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: top;
+            background: var(--color-gray-1);
         }
 
         h1, h2, h3, h4, h5, h6 {
