--- a/ayamo_refunds/templates/ayamo_refunds/pages/home.html
+++ b/ayamo_refunds/templates/ayamo_refunds/pages/home.html
@@ -7,7 +7,7 @@
                 <a class="main-logo" href="/">
                     <i class="fa-solid fa-hand-holding-dollar main-logo-icon"></i>
                     <span class="main-logo-text">
-                        Expenses
+                        Refunds
                     </span>
                 </a>
             </h1>
